syntax = "proto3";

package payment;
import "google/protobuf/timestamp.proto";

option go_package = "./pb;pb";

message CreatePaymentRequest{
    float amount = 1;
}

message PaymentResponse{
    string id = 1;
    float amount = 2;
    string status = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

service PaymentService{
    rpc CreatePayment(CreatePaymentRequest) returns (PaymentResponse);
}